<resources>
    <string name="app_name">pizzaTracking</string>
    <string name="auth_failed">authentication failed</string>
    <string name="auth_succeeded">Authenricated</string>
    <string name="save">Save</string>
    <string name="Address">Address</string>
    <string name="Phone">Phone</string>
    <string name="Name">Name</string>
    <!--<string name="GoogleSignInFireBaseKey">AIzaSyCWsueF_PvPz9twYnHOhflxJyGOTlUEYb8</string>-->
    <string name="GoogleSignInFireBaseKey">nJBs-wDyuFxEu_e7m7HWo8uR</string>
    <string name="SharedPreferenceDBName">SHARED_INFO</string>
    <string name="login_as_customer">Login as customer</string>
    <string name="login_as_restaurant">Login As Restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FoodItemName">Name</string>
    <string name="Price">Price</string>
    <string name="add">Add</string>
    <string name="SHARED_PREFERENCE_DB_NAME">SHARED_PREFERENCES</string>
</resources>
